tests/samples/valid/builtin_format_i128.pn

fn main() -> u8
{
	var x: i128 = -170141183460469231731687303715884105723;
	{
		print:
		print!(x, "\n");
		x = x / 10;
		check:
		if x == 0
			goto return;
		loop;
	}
	return: 0
}
